<resources>
    <string name="app_name">CAAT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password_baru">Masukan password baru</string>
    <string name="password_baru_2">Masukan kembali password baru</string>
    <string name="gambar_proyek">gambar_proyek</string>
    <string name="download_form">Download Form</string>
    <string name="ib_download">ib_download</string>
    <string name="tujuan">Tujuan</string>
    <string name="metode">Metode</string>
    <string name="nomor_form">Nomor form</string>
    <string name="keterangan">Keterangan</string>
    <string name="pertanyaan">Pertanyaan</string>
    <string name="nilai_1">Nilai 1</string>
    <string name="nilai_2">Nilai 2</string>
    <string name="nilai_3">Nilai 3</string>
    <string name="nilai_4">Nilai 4</string>
    <string name="nilai_5">Nilai 5</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="sisipkan">Sisipkan :</string>
    <string name="save">Save</string>
    <string name="ib_add">ib_add</string>
    <string name="id">ID :</string>
    <string name="nama">Nama :</string>
    <string name="alamat">Alamat :</string>
    <string name="nomor_telepon">Nomor Telepon :</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="jawaban">Jawaban</string>
    <string name="sisipkan_2">Sisipkan</string>
    <string name="caat">Computer Assisted Audit Techniques</string>
    <string name="input_file">Input File</string>
    <string name="anda_belum_melampirkan_file">Anda Belum Melampirkan File</string>
    <string name="simpan">Simpan</string>
    <string name="masukan_jumlah_responden">Masukan jumlah responden :</string>
    <string name="tampilkan">tampilkan</string>
    <string name="belum_ada_file">Belum ada file</string>
    <string name="nilai_maksimal">Nilai Maksimal</string>
</resources>
