<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Features.kuisioner.KuisionerActivity">

    <TextView
        android:id="@+id/tvNoForm"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/nomor_form"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/etNama"
        android:hint="@string/nama"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tvJumlah"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor,RtlHardcoded,UnusedAttribute" />

    <TextView
        android:id="@+id/tvNamaMetode"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/metode"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvTujuanMetode"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/tujuan"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tv_ket_metode"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/keterangan"
        tools:ignore="RtlHardcoded" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tvJumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/masukan_jumlah_responden"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/etMaksimal"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tvJumlah"
            android:background="@drawable/shape_input"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor,RtlHardcoded,UnusedAttribute" />

        <Button
            android:id="@+id/btnTampilkan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/tampilkan"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/download_form"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:text="@string/pertanyaan"
                    android:textColor="@color/colorWhite"
                    tools:ignore="NestedWeights,RtlSymmetry" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/_1"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/_2"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/_3"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/_4"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/_5"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_kuisioner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:padding="5dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/simpan"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>
</LinearLayout>