<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Features.Login.ChangePassword.GantiPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/password_baru" />

    <EditText
        android:id="@+id/ganti_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/shape_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="LabelFor,UnusedAttribute" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/password_baru_2" />

    <EditText
        android:id="@+id/ganti_password2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/shape_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="LabelFor,UnusedAttribute" />

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/shape_button"
        android:text="@string/simpan"
        android:textColor="@color/colorWhite" />
</LinearLayout>